  * New address system for irccd.socket,
  * Add new irccd.util.convert,
  * Add onQueryCommand new callback,
  * Added more fields in Date:calendar,
  * Add option auto-rejoin to server,
  * Added coroutine library,
  * Add uid and gid options,
  * Add new server.list function,
  * Add rules system,
  * Add logger.debug,
  * Add fs.separator,
  * Create brand new documentation with Pandoc,
  * Lua 5.3 is now imported and the only available option.

1.1.5 February 14, 2015
---------------------------------------
  * Fix Mac OS X build,
  * Fix null constructed strings,
  * Fix general.foreground option not working,
  * Windows: Lua and OpenSSL are built as DLL and copied to installation.

1.1.4 March 28, 2014
---------------------------------------
  * Fix Visual C++ redistributable installation.

1.1.3 March 22, 2014
---------------------------------------
  * Fix default internet socket address,
  * Remove listener disconnection errors,
  * Updated Windows C++ 2013 redistributable.

1.1.2 February 26, 2014
---------------------------------------
  * Fix the example in roulette documentation,
  * Fix command parsing for onCommand event.

1.1.1 February 15, 2014
---------------------------------------
  * Fix fs.mkdir that didn't return an error,
  * Add missing optional mode parameter in fs.mkdir documentation,
  * Also add irccd.VERSION_PATCH.

1.1 January 30, 2014
---------------------------------------
  * Added support for UDP sockets,
  * Added a plugin for authentication,
  * Windows irccd's home is now the irccd.exe parent directory,
  * Added new socket API for Lua,
  * Added new thread API for Lua,
  * Added support for server reconnection,
  * Added support for text formatting with colors and attributes,
  * Added support for onMe (CTCP Action) event,
  * Added new way to load plugin by paths,
  * Server:whois and server:names generate a new events instead of callback,
  * Support of connecting and disconnecting at runtime,