@@ -1,0 +1,66 @@
+/*
+ * Timer.cpp -- Lua timers
+ *
+ * Copyright (c) 2013, 2014 David Demelier <markand@malikania.fr>
+ *
+ * Permission to use, copy, modify, and/or distribute this software for any
+ * purpose with or without fee is hereby granted, provided that the above
+ * copyright notice and this permission notice appear in all copies.
+ *
+ * THE SOFTWARE IS PROVIDED "AS IS" AND THE AUTHOR DISCLAIMS ALL WARRANTIES
+ * WITH REGARD TO THIS SOFTWARE INCLUDING ALL IMPLIED WARRANTIES OF
+ * MERCHANTABILITY AND FITNESS. IN NO EVENT SHALL THE AUTHOR BE LIABLE FOR
+ * ANY SPECIAL, DIRECT, INDIRECT, OR CONSEQUENTIAL DAMAGES OR ANY DAMAGES
+ * WHATSOEVER RESULTING FROM LOSS OF USE, DATA OR PROFITS, WHETHER IN AN
+ * ACTION OF CONTRACT, NEGLIGENCE OR OTHER TORTIOUS ACTION, ARISING OUT OF
+ * OR IN CONNECTION WITH THE USE OR PERFORMANCE OF THIS SOFTWARE.
+ */
+
+#include <chrono>
+
+#include <common/Logger.h>
+
+#include "Timer.h"
+
+namespace irccd {
+
+Timer::Timer(TimerType type, int delay, int reference)
+	: m_type{type}
+	, m_delay{delay}
+	, m_reference{reference}
+{
+}
+
+Timer::~Timer()
+{
+	Logger::debug("timer: destroyed");
+
+	try {
+		m_thread.join();
+	} catch (const std::exception &) {
+	}
+}
+
+void Timer::start(TimerSignal func)
+{
+	m_signal = std::move(func);
+
+	m_thread = std::thread{[&] () {
+		while (m_alive) {
+			std::this_thread::sleep_for(std::chrono::milliseconds(m_delay));
+
+			// Signal process
+			m_signal();
+
+			if (m_type == TimerType::Single)
+				m_alive = false;
+		}
+	}};
+}
+
+void Timer::stop()
+{
+	m_alive = false;
+}
+
+} // !irccd
