@@ -1,0 +1,115 @@
+/*
+ * Timer.h -- Lua timers
+ *
+ * Copyright (c) 2013, 2014 David Demelier <markand@malikania.fr>
+ *
+ * Permission to use, copy, modify, and/or distribute this software for any
+ * purpose with or without fee is hereby granted, provided that the above
+ * copyright notice and this permission notice appear in all copies.
+ *
+ * THE SOFTWARE IS PROVIDED "AS IS" AND THE AUTHOR DISCLAIMS ALL WARRANTIES
+ * WITH REGARD TO THIS SOFTWARE INCLUDING ALL IMPLIED WARRANTIES OF
+ * MERCHANTABILITY AND FITNESS. IN NO EVENT SHALL THE AUTHOR BE LIABLE FOR
+ * ANY SPECIAL, DIRECT, INDIRECT, OR CONSEQUENTIAL DAMAGES OR ANY DAMAGES
+ * WHATSOEVER RESULTING FROM LOSS OF USE, DATA OR PROFITS, WHETHER IN AN
+ * ACTION OF CONTRACT, NEGLIGENCE OR OTHER TORTIOUS ACTION, ARISING OUT OF
+ * OR IN CONNECTION WITH THE USE OR PERFORMANCE OF THIS SOFTWARE.
+ */
+
+#ifndef _IRCCD_TIMER_H_
+#define _IRCCD_TIMER_H_
+
+#include <atomic>
+#include <functional>
+#include <thread>
+
+namespace irccd {
+
+/**
+ * Signal handler when timer ends.
+ */
+using TimerSignal = std::function<void ()>;
+
+/**
+ * @enum TimerType
+ * @brief Type of timer
+ */
+enum class TimerType {
+	Single,			//!< The timer ends after execution
+	Repeat			//!< The timer loops
+};
+
+/**
+ * @class Timer
+ * @brief Timer class
+ */
+class Timer final {
+private:
+	TimerSignal m_signal;
+	TimerType m_type;
+	int m_delay;
+	int m_reference;
+	std::thread m_thread;
+	std::atomic<bool> m_alive{true};
+
+public:
+	/**
+	 * Timer constructor.
+	 *
+	 * @param type the timer type
+	 * @param delay the delay in milliseconds
+	 * @param reference the Lua index reference
+	 */
+	Timer(TimerType type, int delay, int reference);
+
+	/**
+	 * Move constructor defaulted.
+	 */
+	Timer(Timer &&) = default;
+
+	/**
+	 * Move assignment defaulted.
+	 */
+	Timer &operator=(Timer &&) = default;
+
+	/**
+	 * Destructor, closes the thread.
+	 */
+	~Timer();
+
+	/**
+	 * Starts the thread with the signals.
+	 *
+	 * @param signal when timer signals
+	 */
+	void start(TimerSignal signal);
+
+	/**
+	 * Stop the timer
+	 */
+	void stop();
+
+	/**
+	 * Get the Lua reference.
+	 *
+	 * @return the reference
+	 */
+	inline int reference() const noexcept
+	{
+		return m_reference;
+	}
+
+	/**
+	 * Tells if the timer has still a running thread.
+	 *
+	 * @return true if still alive
+	 */
+	inline bool alive() const noexcept
+	{
+		return m_alive;
+	}
+};
+
+} // !irccd
+
+#endif // !_IRCCD_TIMER_H
