@@ -40,6 +40,8 @@ set(
 	${CMAKE_CURRENT_LIST_DIR}/LuaSystem.h
 	${CMAKE_CURRENT_LIST_DIR}/LuaThread.cpp
 	${CMAKE_CURRENT_LIST_DIR}/LuaThread.h
+	${CMAKE_CURRENT_LIST_DIR}/LuaTimer.cpp
+	${CMAKE_CURRENT_LIST_DIR}/LuaTimer.h
 	${CMAKE_CURRENT_LIST_DIR}/LuaUtf8.cpp
 	${CMAKE_CURRENT_LIST_DIR}/LuaUtf8.h
 	${CMAKE_CURRENT_LIST_DIR}/LuaUtil.cpp
